# rnaseq-registry

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  rnaseq_registry.py
src/ensembl/rnaseq/registry/: __init__.py  api.py  cli.py  database_schema.py
src/ensembl/rnaseq/registry/schemas/: brc4_rnaseq_schema.json
src/tests/: test_registry.py
tests/: conftest.py  test_api.py  test_registry.py  test_schema.py
tests/data/: ok_input_dataset.json  orgs_file.tab
tests/test_api/: datasets_same_name_ok.json  datasets_same_name_same_org.json  datasets_several.json  datasets_several_sorted.json  organisms_ok.tab
